--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVwufhSaNsbADF3iEEzWtFfQsNsAxgyTU&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=['API_KEY_HERE']&libraries=places"></script>
   
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
